data/derived/fa15/progs/unify/prog4069.ml.out
Characters 17-19:
  let g3 () = (10, 10 10);;
                   ^^
Error: This expression has type int
       This is not a function; it cannot be applied.
